feat: add meta description

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Breathe</title>
+    <meta
+      name="description"
+      content="Guided box breathing for calm and focus"
+    />
   </head>
   <body>
     <div id="app">
