feat: add instructions

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <div id="app">
+      <div class="text-container"></div>
       <div class="box-breathing-container">
         <div class="box-breathing-box"></div>
       </div>
